--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,68 @@
-/**
- * TODO(you): Add the CSS necessary to complete your final project.
- **/
+/* style.css */
+
+.inactive {
+  display: none !important;
+}
+
+body {
+  background: #3a6186; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3a6186, #89253e); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3a6186, #89253e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
+#auth-screen {
+   background-color: white;
+   color: black;
+   padding: 10px;
+   height: 20vh;
+   width: 30vh;
+   border-radius: 20px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   -webkit-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+}
+
+#auth-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#home-screen-info {
+  background-color: white;
+}
+
+#new-meeting {
+  background: #D5B0AC;  /* fallback for old browsers */
+}
+
+#new-meeting h1 {
+  display: span;
+}
+
+#close-new-meeting {
+  display: span;
+  margin-right: 0px;
+}
+#content div {
+  background-color: #BDFFF3;
+  border-radius: 5px;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+#meetings section {
+  background-color: #BDFFF3;
+  border-radius: 5px;
+  text-align: left;
+  margin-bottom: 10px;
+}
