--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,6 +53,16 @@ body {
   display: span;
   margin-right: 0px;
 }
+
+#event-query-input {
+  width: 45vh;
+}
+
+.home {
+  background-color: white;
+  border-color: grey;
+  border-radius: 10px;
+}
 #content div {
   background-color: #BDFFF3;
   border-radius: 5px;
@@ -60,7 +70,7 @@ body {
   margin-bottom: 10px;
 }
 
-#meetings section {
+#meetings section, pre section{
   background-color: #BDFFF3;
   border-radius: 5px;
   text-align: left;
